	PR gold/15355 	* layout.cc (Layout::segment_precedes): Allow more than one 	segment with the same type and flags.